# build-ai-uis-workshop-app

./: .env.example  .gitignore  .template-fork-target  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKSHOP.md  cloudbuild.yaml  firebase.json  firestore.indexes.json  firestore.rules  get-firebase-config.sh
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  cloudbuild.yaml  fast_api_app.py  pyproject.toml
backend/adk/: a2ui.py  a2ui_surface_context.py  agent.py  agui.py  artifact_tools.py  budget_config.py  callbacks.py  iframe_context.py  instruction_provider_chain.py  live_agent.py  mcp_observability.py  session.py  tools.py
backend/admin/: auth.py  clients.py  platform_seed.py  prewarm_routes.py  routes.py
backend/auth/: __init__.py  access_context.py  firebase_auth.py  group_id_auth.py  group_rate_limit.py  group_routes.py  local_mode_stub.py  permissions.py  routes.py  signed_urls.py
backend/buckets/: __init__.py  bucket_config.py  folder_config.py  routes.py
backend/budget/: __init__.py  callback.py  enforcer.py  in_memory_enforcer.py
backend/channels/: __init__.py  _chunk.py  _commands_runtime.py  _default_skill.py  _demo_cli.py  _skill_invoke.py  attachments.py  base.py  commands.py  discord.py  email_.py  identity.py  registry.py  telegram_.py  whatsapp.py
backend/config/: gcp.py  local_mode.py  models.py  models.yaml
backend/db/: chat_sessions.py  clients.py  firestore.py  firestore_inmemory.py  folders.py  local_fixture.py  title_generator.py
backend/db/models/: __init__.py  access.py  buckets.py  chat_session.py  document.py
backend/observability/: llm_metrics.py  telemetry.py  tenant_context.py  tenant_span_processor.py  timing.py
backend/protocols/: _a2ui_surface_shared.py  a2a.py  a2a_invocation.py  a2ui_surface_action_routes.py  a2ui_surface_action_run_routes.py  agui.py  artefact_review.py  file_extraction.py  iframe_context_routes.py  mcp_proxy.py  mcp_server.py  models_route.py  session_bootstrap_routes.py  sessions_route.py
backend/rag/: __init__.py  corpus.py
backend/scripts/: bootstrap_agent_engine.py  bootstrap_rag_corpus.py  cleanup_legacy_platform_seeds.py  migrate_mcp_context_writes.py  migrate_v5_channel_mappings.py  seed_mcp_servers.py  seed_skills.py  seed_tool_permissions.py  smoke_artifacts.py  smoke_test_infra.py  verify_doc_pipeline.py  verify_infra.py
backend/skills/: platform.py  routes.py  skill_config.py  skill_materializer.py  skill_processor.py  slugify.py
backend/tests/: conftest.py
backend/tests/api_tests/: test_a2a.py  test_a2a_invocation.py  test_a2ui_surface_action_routes.py  test_a2ui_surface_action_run_routes.py  test_admin_clients.py  test_admin_prewarm.py  test_admin_routes.py  test_auth_middleware.py  test_auth_whoami.py  test_buckets.py  test_clients_me.py  test_doc_folders.py  test_documents_reach_agent_e2e.py  test_file_extraction.py  test_folders.py  test_group_routes.py  test_iframe_context_routes.py  test_import_by_reference.py  test_mcp_proxy.py  test_mcp_server.py  (+11 more)
backend/tools/: compare_ppa_contracts.py  entsoe_query.py  extract_ppa_clauses.py  media_utils.py  org_documents.py  rag_tool.py  resource_ids.py  search_agent.py  structured_extraction.py  url_processing.py  workshop_docs.py
cli/: Makefile  README.md  pyproject.toml
cli/aiplatform/: __init__.py  cli.py  config.yaml  http.py
cli/tests/: conftest.py  test_cli_access.py  test_cli_bucket.py  test_cli_client.py  test_cli_docs_corpus.py  test_cli_docs_import.py  test_cli_folder.py  test_cli_groups.py  test_cli_selftest_live.py  test_cli_selftest_mock.py  test_cli_skill_probe.py  test_http.py  test_sessions_trigger_action.py
(+643 files in other folders)
